Fix button text color on iPhone

--- a/aswin-home/src/app/styles/globals.scss
+++ b/aswin-home/src/app/styles/globals.scss
@@ -49,6 +49,7 @@ a:active
 
 .button {
     background-color: var(--bg-color);
+    color:var(--text-color-emph);
     vertical-align: middle;
     border-radius: 0.3em;
     padding: 0.6em;
@@ -85,6 +86,7 @@ a:active
 
     .button.adaptive {
         background-color: #2a2a2a;
+        color:#b8b6b6;
     }
     
     .button.adaptive:hover, 
